--- a/styles/blocks/cost-service/cost-service.css
+++ b/styles/blocks/cost-service/cost-service.css
@@ -74,15 +74,31 @@
   padding-block: 3.125rem;
   gap: 0.625rem;
 }
+.service-cost-card--gap-24 {
+  gap: 1.5rem;
+}
+.service-cost-card--gap-20 {
+  gap: 1.25rem;
+}
+.service-cost-card--gap-20-to-0 {
+  gap: clamp(0rem, -0.5813953488rem + 2.3255813953vw, 1.25rem) !important;
+}
 .service-cost-card--medium-padding {
   padding-block: 1.25rem;
-  gap: 1.5rem;
   justify-content: start;
+}
+.service-cost-card--small-padding {
+  padding: 0.625rem;
+  align-items: start;
+  gap: 1.0625rem;
 }
 .service-cost-card__text {
   line-height: 1.47;
   text-align: center;
   color: var(--text-color-dark-secondary);
+}
+.service-cost-card__text--left {
+  text-align: start;
 }
 .service-cost-card__text--static-fs {
   font-size: 1.125rem;
@@ -120,6 +136,9 @@
 .service-cost-card:has(.service-cost-card__list) .service-cost-card__list {
   line-height: 1.5;
 }
+.service-cost-card:has(.service-cost-card__list) .service-cost-card__list--color-light {
+  color: var(--text-color-dark-secondary);
+}
 .service-cost-card:has(.service-cost-card__list) .service-cost-card__list:has(:nth-child(2)) {
   list-style-type: disc;
   padding-left: 1.6875rem;
@@ -138,34 +157,6 @@
     text-align: center;
   }
 }
-/* Styles for block-section cost-service-addresses. Part of section cost-service. */
-.cost-service-addresses {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: clamp(1.25rem, 0.9593023256rem + 1.1627906977vw, 1.875rem);
-}
-.cost-service-addresses__body {
-  display: flex;
-  flex-direction: column;
-  gap: 1.3125rem;
-}
-.cost-service-addresses__text {
-  font-weight: 700;
-  font-size: 1.125rem;
-  line-height: 1.3;
-  text-transform: uppercase;
-}
-.cost-service-addresses__list {
-  list-style-type: disc;
-  padding-left: 1.6875rem;
-}
-@media (width <= 47.99875rem) {
-  .cost-service-addresses {
-    flex-direction: column;
-    padding-block: 1.25rem;
-  }
-}
 /* Section cost-service. */
 .cost-service__banner {
   margin-bottom: 1.5rem;
@@ -180,13 +171,6 @@
 .cost-service__list--static-margin {
   margin-bottom: 3.125rem;
 }
-.cost-service__list--three-col {
-  grid-template-columns: repeat(3, 1fr);
-  gap: clamp(0.53125rem, 0.0806686047rem + 1.8023255814vw, 1.5rem);
-}
-.cost-service__addresses {
-  margin-bottom: 3.125rem;
-}
 .cost-service__buttons {
   display: flex;
   justify-content: center;
@@ -197,20 +181,9 @@
   font-size: 1rem;
 }
 
-@media (width <= 81.31125rem) {
-  .cost-service__list--three-col {
-    grid-template-columns: repeat(2, 1fr);
-  }
-  .cost-service__list--three-col li:last-child {
-    grid-column: 1/3;
-  }
-}
 @media (width <= 47.99875rem) {
   .cost-service__list {
     grid-template-columns: 1fr;
-  }
-  .cost-service__list--three-col li:last-child {
-    grid-column: 1;
   }
 }
 @media (width <= 35.93625rem) {
