--- a/styles/pages/services-page/services.css
+++ b/styles/pages/services-page/services.css
@@ -1397,16 +1397,20 @@ button[aria-label]::before {
 }
 .advantage-card__text {
   color: var(--text-color-dark-secondary);
-  line-height: 1.5;
+  line-height: 1.52;
 }
 
 @media (width <= 47.99875rem) {
   .advantage-card {
     padding: 1.25rem 1.25rem 1.125rem;
+    row-gap: 1.125rem;
   }
   .advantage-card__heading {
     font-size: 0.9375rem;
     line-height: 1.5;
+  }
+  .advantage-card__text {
+    line-height: 1.47;
   }
 }
 /* Section advantages.Slider(our-advantage). Differences from the advantages section, in the cards.*/
@@ -1476,6 +1480,10 @@ button[aria-label]::before {
   line-height: 1.5;
   color: var(--text-color-dark-secondary);
 }
+.when-work__subtitle:has(ul) ul {
+  margin-block: 0;
+  text-align: start;
+}
 .when-work__buttons {
   display: flex;
   gap: 1.25rem;
@@ -1544,6 +1552,9 @@ button[aria-label]::before {
   .when-work__title {
     padding-inline: 1.875rem;
     line-height: 1.5;
+  }
+  .when-work__title--static-padding {
+    padding-inline: 0;
   }
   .when-work__buttons {
     flex-direction: column;
