create refill-conditioning page. update sections: promo ,cost-service, about-service

--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -128,6 +128,7 @@
   --section-margin-y-extra-big-to-medium: #{fluid(130, 60)};
   --section-margin-y-big-to-medium: #{fluid(120, 60)};
   --section-margin-y-big-to-small: #{fluid(120, 40)};
+  --section-margin-y-extra-big-to-small: #{fluid(130, 40)};
 
   --button-height-small: #{rem(34)};
   --button-height: #{rem(44)};
