--- a/styles/blocks/cost-service/cost-service-location.css
+++ b/styles/blocks/cost-service/cost-service-location.css
@@ -74,6 +74,11 @@
   padding-block: 3.125rem;
   gap: 0.625rem;
 }
+.service-cost-card--small-top-padding {
+  justify-content: start;
+  padding: 1rem 1.25rem 1.25rem;
+  gap: 1.3125rem;
+}
 .service-cost-card--gap-24 {
   gap: 1.5rem;
 }
