create wheel-alignment page. update sections: promo ,cost-service, about-service. added section info-gallery

--- a/styles/blocks/сommon-blocks/_attention-info.scss
+++ b/styles/blocks/сommon-blocks/_attention-info.scss
@@ -20,6 +20,13 @@
       font-size: rem(18);
     }
 
+    &--small {
+      @include fluid-text(16, 15);
+
+      line-height: 1.36;
+      padding-inline: rem(11);
+    }
+
     p:not(:last-child) {
       margin-bottom: rem(17);
     }
