--- a/styles/pages/refill-conditioning-page/refill-conditioning.scss
+++ b/styles/pages/refill-conditioning-page/refill-conditioning.scss
@@ -15,7 +15,7 @@
 @use "../../blocks/promo/_promo-refill-conditioning-page.scss";
 @use "../../blocks/cost-service/_cost-service-short.scss";
 @use "../../blocks/appointment-choose/_appointment-choose.scss";
-@use "../../blocks/about/about-service-refill-conditioning";
+@use "../../blocks/about/_about-service-refill-conditioning.scss";
 @use "../../blocks/advantages/_our-advantages.scss";
 @use "../../blocks/when-work/_when-work.scss";
 @use "../../blocks/other-services/_other-services.scss";
