--- a/styles/blocks/cost-service/cost-service-car-service-page.css
+++ b/styles/blocks/cost-service/cost-service-car-service-page.css
@@ -178,6 +178,11 @@
 .attention-info__text--static-fs {
   font-size: 1.125rem;
 }
+.attention-info__text--small {
+  font-size: clamp(0.9375rem, 0.9084302326rem + 0.1162790698vw, 1rem);
+  line-height: 1.36;
+  padding-inline: 0.6875rem;
+}
 .attention-info__text p:not(:last-child) {
   margin-bottom: 1.0625rem;
 }
