create car-wash page. update sections: promo ,cost-service, about-service

--- a/styles/blocks/cost-service/cost-service-car-service-page.css
+++ b/styles/blocks/cost-service/cost-service-car-service-page.css
@@ -191,6 +191,9 @@
   .attention-info {
     flex-direction: column;
   }
+  .attention-info__text {
+    line-height: 1.49;
+  }
 }
 /* ===================================== */
 /* ===================================== */
