--- a/styles/pages/car-service-page/car-service.css
+++ b/styles/pages/car-service-page/car-service.css
@@ -1537,6 +1537,9 @@ button[aria-label]:not(.promotion__card-link)::before {
   .attention-info {
     flex-direction: column;
   }
+  .attention-info__text {
+    line-height: 1.49;
+  }
 }
 /* ===================================== */
 /* ===================================== */
