--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -67,6 +67,11 @@
     #070708 86.12%,
     #0b0b0c 100%
   );
+  --color-grad-5: linear-gradient(
+    270deg,
+    rgba(55, 50, 49, 0.15) 28%,
+    rgba(55, 50, 49, 0.95) 57.52%
+  );
   --color-white-opacity-10: #ffffff34;
   --color-white-opacity-35: #ffffffa8;
   --color-black-opacity-48: #3332327a;
